스웨거 문제 해결
